--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "ext-curl": "*",
     "ext-json": "*",
     "php-di/slim-bridge": "^3.4",
-    "vlucas/phpdotenv": "^5.6"
+    "vlucas/phpdotenv": "^5.6",
+    "ext-pdo": "*"
   },
   "scripts": {
     "start": "php -S localhost:8000 -t public"
